<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapsActivity"
    android:id = "@+id/mapLayout">

    <fragment
        android:id="@+id/map"
        class="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="665dp"
        android:scrollbars="vertical" />

    <SearchView
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:id="@+id/sv_location"
        />

    <RadioGroup
        android:id="@+id/radio_group_list_selector"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:background="#80000000"
        android:layout_gravity="bottom
"
         >

        <RadioButton
            android:id="@+id/returnHomeButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/return_home"
            android:gravity="center_horizontal|center_vertical"
            android:layout_weight="1"
            />
        <View
            android:id="@+id/VerticalLine"
            android:layout_width="1dip"
            android:layout_height="match_parent"
            android:background="#aaa" />

        <RadioButton
            android:id="@+id/addIncidentButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/add_incident_at_marker" />

        <View
            android:id="@+id/VerticalLine2"
            android:layout_width="1dip"
            android:layout_height="match_parent"
            android:background="#aaa" />

        <RadioButton
            android:id="@+id/getSafetyScoreButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/get_safety_score"
            android:layout_weight="1"
           />
        <View
            android:id="@+id/VerticalLine3"
            android:layout_width="1dip"
            android:layout_height="match_parent"
            android:background="#aaa" />

        <RadioButton
            android:id="@+id/deleteIncidentButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/delete_incident"
            android:layout_weight="1"
            />
        <View
            android:id="@+id/VerticalLine4"
            android:layout_width="1dip"
            android:layout_height="match_parent"
            android:background="#aaa" />


    </RadioGroup>
</FrameLayout>