...
        <item>3</item>
        <item>4</item>
        <item>5</item>

    </string-array>

    <string name="error_title_too_short">Incident title must be at least 5 characters</string>
    <string name="error_title_too_long">Incident title must be less than 50 characters</string>

    <string name="emergency_resources_title">Vancouver Police Department and other resources:</string>
    <string name="emergency_resources_subtitle1">Phone numbers:</string>
    <string name="police_fire_ambulance">Police, fire ambulance:</string>
    <string name="emergency_number_911">911</string>
...
